samples/_failures_safe/1761400703_b2e2db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_801d1bce.c: In function ‘main’:
./samples/SAFE/__tmp_801d1bce.c:158:20: error: missing terminating " character
  158 |             printf("Invalid edge parameters.
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_801d1bce.c:158:13: error: expected expression at end of input
  158 |             printf("Invalid edge parameters.
      |             ^~~~~~
./samples/SAFE/__tmp_801d1bce.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_801d1bce.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_801d1bce.c:158:13: error: expected declaration or statement at end of input
